# resources/model_delete_session.go
@@ -1,0 +1,158 @@
+/*
+Example API
+
+This is a sample API.
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the DeleteSession type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &DeleteSession{}
+
+// DeleteSession struct for DeleteSession
+type DeleteSession struct {
+	Data DeleteSessionData `json:"data"`
+}
+
+type _DeleteSession DeleteSession
+
+// NewDeleteSession instantiates a new DeleteSession object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewDeleteSession(data DeleteSessionData) *DeleteSession {
+	this := DeleteSession{}
+	this.Data = data
+	return &this
+}
+
+// NewDeleteSessionWithDefaults instantiates a new DeleteSession object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewDeleteSessionWithDefaults() *DeleteSession {
+	this := DeleteSession{}
+	return &this
+}
+
+// GetData returns the Data field value
+func (o *DeleteSession) GetData() DeleteSessionData {
+	if o == nil {
+		var ret DeleteSessionData
+		return ret
+	}
+
+	return o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value
+// and a boolean to check if the value has been set.
+func (o *DeleteSession) GetDataOk() (*DeleteSessionData, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Data, true
+}
+
+// SetData sets field value
+func (o *DeleteSession) SetData(v DeleteSessionData) {
+	o.Data = v
+}
+
+func (o DeleteSession) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o DeleteSession) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["data"] = o.Data
+	return toSerialize, nil
+}
+
+func (o *DeleteSession) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"data",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varDeleteSession := _DeleteSession{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varDeleteSession)
+
+	if err != nil {
+		return err
+	}
+
+	*o = DeleteSession(varDeleteSession)
+
+	return err
+}
+
+type NullableDeleteSession struct {
+	value *DeleteSession
+	isSet bool
+}
+
+func (v NullableDeleteSession) Get() *DeleteSession {
+	return v.value
+}
+
+func (v *NullableDeleteSession) Set(val *DeleteSession) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableDeleteSession) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableDeleteSession) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableDeleteSession(val *DeleteSession) *NullableDeleteSession {
+	return &NullableDeleteSession{value: val, isSet: true}
+}
+
+func (v NullableDeleteSession) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableDeleteSession) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
